--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,9 +7,9 @@ hero:
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Enter Narrative
+    - text: Click here or scroll  ⬇️
       link: /intro/
-      icon: right-arrow
+    #   icon: none
       variant: primary
     - text: Contribute on github
       link: https://github.com/iqbalamo93/NeuralNarrative/
@@ -21,6 +21,7 @@ import NextCard from "../../components/NextCard";
 
 import ProjectsCard from "../../components/Projectscard"
 
+<div className="rolling-text"></div>
 
 <NextCard client:visible header="Header"/>
 
