--- a/src/content/docs/blogs/Quantization/Intro.mdx
+++ b/src/content/docs/blogs/Quantization/Intro.mdx
@@ -1,5 +1,5 @@
 ---
-title: Qunatization-What,Why, and How...
+title: Quantization-What,Why, and How...
 description: A guide in my new Starlight docs site.
 ---
 import { Image } from 'astro:assets';
@@ -46,6 +46,7 @@ Consider the example illustrated below, where we have a 4x4 weight matrix. These
     <Image className="" src={quantized} alt="A description of my image." />
     </label> 
 </div>
+
 <details>
     <summary>Click here to see code:</summary>
 
