--- a/src/content/docs/blogs/Quantization/Intro.mdx
+++ b/src/content/docs/blogs/Quantization/Intro.mdx
@@ -196,4 +196,5 @@ In addition to the Mean-Squared-Error (MSE) approach, where we choose parameters
 ### Beyond Linear Qunatization
 Beyond these, the field of quantization is rich with diverse methods, each suited to different scenarios and requirements. For instance, [DorEfa](https://intellabs.github.io/distiller/algo_quantization.html#dorefa) and [WRPN](https://intellabs.github.io/distiller/algo_quantization.html#wrpn) are two other notable techniques that have emerged, offering unique approaches to reducing model size and computational overhead. While our current discussion centers on Range-Based Linear Quantization, it's important to acknowledge these other methodologies as well. Future articles will delve into DorEfa and WRPN, providing a comprehensive understanding of the landscape of quantization in machine learning.
 
+Next, let's turn our attention to how these quantization techniques are actually used. We'll take a closer look at methods like Post-Training Quantization (PTQ) and Quantization Aware Training (QAT), which are key to making machine learning models more efficient and effective. Join me as we explore these important techniques and their practical applications.
 </article>
