--- a/src/content/docs/blogs/Quantization/Intro.mdx
+++ b/src/content/docs/blogs/Quantization/Intro.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quantization-What,Why, and How...
+title: What,Why, and How...
 description: A guide in my new Starlight docs site.
 ---
 import { Image } from 'astro:assets';
