--- a/src/content/docs/blogs/Transformers/00_Intro.mdx
+++ b/src/content/docs/blogs/Transformers/00_Intro.mdx
@@ -4,15 +4,14 @@ description: A guide in my new Starlight docs site.
 
 ---
 import '../../../../styles/global.css';  
-import myImage from "./transformer.png"; 
+import myImage from "../../../../assets/transformer.png";
 import { Image } from 'astro:assets';
 
 ### A Practical Guide
 
 Welcome to our specialized blog section, where we turn the theory of Transformers into tangible code. Here, we're not just discussing concepts; we're building them.
-<div style={{ display: "flex", justifyContent: "center" }}>
+
     <Image src={myImage} width="300" alt="A description of my image." />
-</div>
 
 
 In this series, we embark on a hands-on journey to implement the key ideas presented in the "Attention is All You Need" paper. Our goal is to transform theoretical knowledge into practical skills, focusing on the actual coding of Transformers and their derivatives.
