--- a/src/content/docs/blogs/attention/self_attention.mdx
+++ b/src/content/docs/blogs/attention/self_attention.mdx
@@ -12,8 +12,4 @@ import multi_head from '../../../../assets/multi_head.png';
 
 ## Multiheaded
 <Image className="" src={multi_head} alt="A description of my image." />
-- IIgnore the Softmax operation and normalize by dividing by the square root of `d_model`, because these operations do not affect the dimensions of the matrices involved.
-
-<ul style="list-style-type: circle;">
-  <li>Ignoring Softmax and normalizing (divide by sqrt of d_model)</li>
-</ul>
+- Ignore the Softmax operation and normalize by dividing by the square root of `d_model`, because these operations do not affect the dimensions of the matrices involved.
