--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,11 +1,11 @@
 ---
 title: Welcome to Neural Narrative
-description: Chronicles of Innovation, Intelligence, and Imagination.
+description: Collection of my articles and Projects .
 template: splash
 hero:
-  tagline: Chronicles of Innovation, Intelligence, and Imagination
+  tagline: Collection of my articles and projects encompassing AI
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/converted.webp
   actions:
     - text: Click here or scroll  ⬇️
       link: /intro/
