--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -36,8 +36,8 @@ import ProjectsCard from "../../components/Projectscard"
 		/>
 	</Card>
 
-	<Card title="Books Review" icon="add-document">
-		<LinkCard description = "In the 'Books Review' section, we serve up bi-weekly reviews of tech and AI literature – it's like speed dating for your brain with the smartest books on the shelf!"
+	<Card title="Quick Books" icon="add-document">
+		<LinkCard description = "In the 'Quick Books' I put the golden learning from various books that I am reading."
 		href="/books-review/intro-reviews/"
 		/>
 	</Card>
