--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -4,12 +4,12 @@ description: Collection of my articles and Projects .
 template: splash
 hero:
   tagline: Collection of my articles and projects encompassing AI
-  image:
-    file: ../../assets/converted.webp
+#   image:
+    # file: ../../assets/test.svg
   actions:
     - text: Click here or scroll  ⬇️
       link: /intro/
-    #   icon: none
+    #   icon: ../../assets/test.svg
       variant: primary
     - text: Contribute on github
       link: https://github.com/iqbalamo93/NeuralNarrative/
